--- a/about.html
+++ b/about.html
@@ -5,10 +5,10 @@
     <title>About | Bloomington-Normal Sister Cities</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/foundation.css" />
+    <link rel="stylesheet" href="/foundation.css" type="text/css"/>
     <script src="/js/vendor/modernizr.js"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/overrides.css" rel="stylesheet">
+    <link href="/overrides.css" rel="stylesheet" type="text/css">
     <link href="/css/lightbox.css" rel="stylesheet" />
 
 
