--- a/about.html
+++ b/about.html
@@ -5,10 +5,10 @@
     <title>About | Bloomington-Normal Sister Cities</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="foundation.css" type="text/css"/>
+    <link rel="stylesheet" href="foundation.css" />
     <script src="/js/vendor/modernizr.js"></script>
-    <link href="netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="overrides.css" rel="stylesheet" type="text/css">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="overrides.css" rel="stylesheet">
     <link href="/css/lightbox.css" rel="stylesheet" />
 
 
@@ -43,13 +43,13 @@
 	    <ul>
 		 			<li>
 		 			<div class="small-12 medium-2 columns">	
-			    	<a href="/programs">Programs</a>
+			    	<a href="programs.html">Programs</a>
 			    	</div>
 			    	</li>
 
 			    	<li>
 			    		<div class="small-12 medium-2 columns">
-			    	    <a href="/gardens">Gardens</a>
+			    	    <a href="gardens.html">Gardens</a>
 
 			    		</div>
 			    	</li>
@@ -63,13 +63,13 @@
 
 		    <li>
 			    <div class="small-12 medium-2 columns">
-			    	<a href="/about">About</a>
+			    	<a href="about.html">About</a>
 			    </div>
 		    </li>
 
 		    <li>
 			    <div class="small-12 medium-2 columns">
-			    	<a href="/get-involved">Get Involved</a>
+			    	<a href="getinvolved.html">Get Involved</a>
 			    </div>
 		    </li>
 		    </ul>
