--- a/programs.html
+++ b/programs.html
@@ -4,10 +4,10 @@
     <title>Programs | Bloomington-Normal Sister Cities</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/foundation.css" />
+    <link rel="stylesheet" href="foundation.css" />
     <script src="/js/vendor/modernizr.js"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/overrides.css" rel="stylesheet">
+    <link href="overrides.css" rel="stylesheet">
     <link href="/css/lightbox.css" rel="stylesheet" />
 
 
@@ -42,13 +42,13 @@
 	    <ul>
 		 			<li>
 		 			<div class="small-12 medium-2 columns">	
-			    	<a href="/programs">Programs</a>
+			    	<a href="programs.html">Programs</a>
 			    	</div>
 			    	</li>
 
 			    	<li>
 			    		<div class="small-12 medium-2 columns">
-			    	    <a href="/gardens">Gardens</a>
+			    	    <a href="gardens.html">Gardens</a>
 
 			    		</div>
 			    	</li>
@@ -62,13 +62,13 @@
 
 		    <li>
 			    <div class="small-12 medium-2 columns">
-			    	<a href="/about">About</a>
+			    	<a href="about.html">About</a>
 			    </div>
 		    </li>
 
 		    <li>
 			    <div class="small-12 medium-2 columns">
-			    	<a href="/get-involved">Get Involved</a>
+			    	<a href="getinvolved.html">Get Involved</a>
 			    </div>
 		    </li>
 		    </ul>
@@ -122,6 +122,16 @@ background: url(beernutsbanner.jpg);
 		<!-- <div class="small-12 medium-4 columns"> -->
 			
 			<p><p><strong>Sana Ohashi (大箸紗那）</strong>has been selected as an exchange student from Asahikawa. She is in the first grade of Asahikawa Higashi High School. She has been strongly recommended by her teacher to represent Asahikawa as an exchange student as she is highly motivated person for challenges and her actions from the broad point of view in various area. She has been involved in many activities such as those in her self-introduction below.<br>She lives with her father, Nobuyuki - attorney at law, and mother, Chikako works for law office, and little brother, Makoto (13) and little sister, Haruka (11).</p><p><img src="/groudongodscantstopwinning.jpg"></p>Student has her own spending money, over her own personal expenses, and have full health insurance.<p>Volunteer host families are asked to provide the student with meals and room and board during her stay.</p></p>
+		<!-- </div> -->
+		<div class="small-12 medium-8 columns">
+			<img src="" alt="">
+		</div>
+	</div>
+	<div class="row">
+		<!-- <div class="small-12 medium-4 columns"> -->
+			
+			<p><p><strong>Arisa Mahatanankoon </strong>of Normal will be a junior at University High School this fall, but she won't actually be at U-High. Instead, Mahatanankoon will be going to school in Asahikawa, Japan.
+				Mahatanankoon is the first Bloomington-Normal student to take part in the Sister Cities student exchange with Asahikawa since the COVID-19 pandemic. The exchange program dates back to the 1960s, but was halted in March 2020 when students were ordered to return to their home countries.</p><p><img src="/groudongodscantstopwinning.jpg"></p>Add content</p></p>
 		<!-- </div> -->
 		<div class="small-12 medium-8 columns">
 			<img src="" alt="">
