--- a/homepage.html
+++ b/homepage.html
@@ -44,13 +44,13 @@
 	    <ul>
 		 			<li>
 		 			<div class="small-12 medium-2 columns">	
-			    	<a href="/programs">Programs</a>
+			    	<a href="programs.html">Programs</a>
 			    	</div>
 			    	</li>
 
 			    	<li>
 			    		<div class="small-12 medium-2 columns">
-			    	    <a href="/gardens">Gardens</a>
+			    	    <a href="gardens.html">Gardens</a>
 
 			    		</div>
 			    	</li>
@@ -64,13 +64,13 @@
 
 		    <li>
 			    <div class="small-12 medium-2 columns">
-			    	<a href="/about">About</a>
+			    	<a href="about.html">About</a>
 			    </div>
 		    </li>
 
 		    <li>
 			    <div class="small-12 medium-2 columns">
-			    	<a href="/get-involved">Get Involved</a>
+			    	<a href="getinvolved.html">Get Involved</a>
 			    </div>
 		    </li>
 		    </ul>
