--- a/gardens.html
+++ b/gardens.html
@@ -5,11 +5,11 @@
     <title>Gardens | Bloomington-Normal Sister Cities</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/foundation.css" />
-    <script src="/js/vendor/modernizr.js"></script>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/overrides.css" rel="stylesheet">
-    <link href="/css/lightbox.css" rel="stylesheet" />
+    <link rel="stylesheet" href="foundation.css" />
+    <script src="js/vendor/modernizr.js"></script>
+    <link href="netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="overrides.css" rel="stylesheet">
+    <link href="lightbox.css" rel="stylesheet" />
 
 
     <link rel="shortcut icon" type="image/ico" href="/img/favicon.ico"/>
