--- a/faq.html
+++ b/faq.html
@@ -57,7 +57,7 @@
                 
                 <li>
                     <div class="hide-for-small medium-4 columns">
-                    <a href="homepage.html"><img src="/img/logo-ie.png"/></a>
+                    <a href="homepage.html"><img src="img/logo-ie.png"/></a>
                     </div>
                 </li>
     
