--- a/gardens.html
+++ b/gardens.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="foundation.css" />
     <script src="js/vendor/modernizr.js"></script>
-    <link href="netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- <link href="netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"> -->
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+	<link rel="stylesheet" type="text/css" href="https://themes.googleusercontent.com/static/fonts/sourcesanspro/v7/fpTVHK8qsXbIeTHTrnQH6H7XMO6S-yJpg1torQFmnv33rGVtsTkPsbDajuO5ueQw.woff">
     <link href="overrides.css" rel="stylesheet">
     <link href="lightbox.css" rel="stylesheet" />
 
@@ -57,7 +59,7 @@
 		    
 		    <li>
 			    <div class="hide-for-small medium-4 columns">
-			    <a href="homepage.html"><img src="/img/logo-ie.png"/></a>
+			    <a href="homepage.html"><img src="img/logo-ie.png"/></a>
 			    </div>
 		    </li>
 
