--- a/getinvolved.html
+++ b/getinvolved.html
@@ -158,7 +158,7 @@ background: url(img/get-involved-banner.jpg);
 
 <div class="row">
 	<div class="small-12 columns">
-		<p class="text-center"><a class="button" href="/contact">Contact Us</a></p>
+		<p class="text-center"><a class="button" href="contact.ht,l">Contact Us</a></p>
 	</div>
 </div>
 <hr>
