--- a/programs.html
+++ b/programs.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="foundation.css" />
     <script src="js/vendor/modernizr.js"></script>
     <link href="netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="overrides.css" rel="stylesheet">
     <link href="lightbox.css" rel="stylesheet" />
 
