--- a/getinvolved.html
+++ b/getinvolved.html
@@ -132,7 +132,7 @@ background: url(img/get-involved-banner.jpg);
 <div class="row">
 	<div class="small-12 columns">
 		<h3>Apply today</h3>
-		<p><p><strong>Benefits of Being a Host Family</strong></p><ul><li>Interact with another culture</li><li>Share American culture, food, and customs</li><li>Create life-long friendships</li><li>Gain a global perspective</li><li>Have fun</li></ul><p>Due to the pandemic, both exchange programs are currently suspended. If you would like to be contacted about being a host family in the future, please fill out this form. </p><p><a href="http://www.bnsistercities.org/admin/resources/hostfamilyapp-2019.doc">Junior Ambassadors Host Family Application</a></p><p><a href="http://www.bnsistercities.org/admin/resources/h.s.-host-family-application-form.pdf">High School Host Family Application</a></p></p>
+		<p><p><strong>Benefits of Being a Host Family</strong></p><ul><li>Interact with another culture</li><li>Share American culture, food, and customs</li><li>Create life-long friendships</li><li>Gain a global perspective</li><li>Have fun</li></ul><p>Due to the pandemic, both exchange programs are currently suspended. If you would like to be contacted about being a host family in the future, please fill out this form. </p><p><a href="http://www.bnsistercities.org/admin/resources/hostfamilyapp-2019.doc">Junior Ambassadors Host Family Application</a></p><p><a href="pdfs/ACEShfapp.pdf">High School Host Family Application</a></p></p>
 	</div>
 </div>
 <hr>
@@ -159,7 +159,7 @@ background: url(img/get-involved-banner.jpg);
 
 <div class="row">
 	<div class="small-12 columns">
-		<p class="text-center"><a class="button" href="contact.ht,l">Contact Us</a></p>
+		<p class="text-center"><a class="button" href="contact.html">Contact Us</a></p>
 	</div>
 </div>
 <hr>
