--- a/meetingtimes.html
+++ b/meetingtimes.html
@@ -81,8 +81,8 @@
  		<div class="row">
  	<div class="small-12 columns">
 		<h1 class="text-center" style="color: #383829">Looking for the Host Families to an exchange student from Japan.</h1>
-		<!-- <p class="text-center"></p> -->
-		<!-- <p class="text-center"><a class="button" href="/contact/index.php">Contact Us!</a></p> -->
+		<p class="text-center"></p>
+		<p class="text-center"><a class="button" href="/contact/index.php">Contact Us!</a></p>
  	</div>
  	</div>	
  	</div>
