--- a/meetingtimes.html
+++ b/meetingtimes.html
@@ -78,71 +78,21 @@
  	
 <section class="full-width cta" style="background:url(img/hostfamilyhsfrombanner.jpg)no-repeat;background-position:0 40%;background-size: cover;-webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;">
  	<div class="container">
- 		<div class="row">
- 	<div class="small-12 columns">
-		<h1 class="text-center" style="color: #383829">Looking for the Host Families to an exchange student from Japan.</h1>
-		<p class="text-center"></p>
-		<p class="text-center"><a class="button" href="/contact/index.php">Contact Us!</a></p>
+		<div class="row">
+			<br>
+			<br>
+			<br>
+			<br>
+		<div class="small-12 columns">
+			<section class="callout-homepage">
+				<h2 class="text-center">Google Calendar here?</h2>
+			</section>
  	</div>
- 	</div>	
- 	</div>
-
- </section><div class="row">
-	<div class="small-12 columns">
-		<section class="callout-homepage">
-			<h2 class="text-center">Who we are</h2>
-		</section>
-		<section class="callout-homepage-entry">
-			<p><p style="text-align: center;">The Bloomington-Normal Asahikawa Sister Cities Committee is a commission of up to 20 citizens appointed by either the City of Bloomington or the Town of Normal council. Since 1962, the committee has served as ambassadors of Japanese culture in Bloomington-Normal while facilitating friendship with our sister city, Asahikawa, Japan.</p><h4 class="text-center">Our Mission</h4><p style="text-align: center;">The committee's mission is to promote friendship and goodwill between the cities of Bloomington-Normal and Asahikawa, Japan through our premier junior high and high school exchange programs. These short-term and long-term exchange programs introduce both American and Japanese students to different ways of life and work towards cultivating their understanding and appreciation of other cultures.</p></p>
-		</section>
 	</div>
-</div>
-
-
-<div class="row">
-
-	<div class="small-12 medium-3 columns text-center" style="margin-top:2rem;">
-		<div class="homepage-box" style="background: url(img/newcapitol.jpg);background-size: cover;">
- 		</div>
- 		<div class="homepage-box-sub">
- 		<p class="text-center"><a class="after-arrow" href="programs.html">Exchange Programs</a></p>
- 		</div>
- 	</div>
-
- 	<div class="small-12 medium-3 columns text-center" style="margin-top:2rem;">
-		<div class="homepage-box" style="background: url(img/aboutgroup.jpeg);background-size: cover;">
- 		</div>
- 		<div class="homepage-box-sub">
- 		<p class="text-center"><a class="after-arrow" href="gardens.html">Gardens </a></p>
- 		</div>
- 	</div>
- 	<div class="small-12 medium-3 columns text-center" style="margin-top:2rem;">
-		<div class="homepage-box" style="background: url(img/trailgarden.jpeg);background-size: cover;">
- 		</div>
- 		<div class="homepage-box-sub">
- 		<p class="text-center"><a class="after-arrow" href="about.html">Our Story</a></p>
- 		</div>
- 	</div>
- 	<div class="small-12 medium-3 columns text-center" style="margin-top:2rem;">
-		<div class="homepage-box" style="background: url(img/flagchildren.jpg);background-size: cover;">
- 		</div>
- 		<div class="homepage-box-sub">
- 		<p class="text-center"><a class="after-arrow" href="getinvolved.html">Get Involved </a></p>
- 		</div>
- 	</div>
- 	
- 		
- </div>
- 
+	</div>
+</section>
 
  <footer>
-
-    <div class="row search-small">
-      <div class="small-12 columns">
-        <form id="form2_search" class="search-large" action="/search" method="get">  
-		        <input id="form2_q" name="q" type="search" />
-				</form>      </div>
-    </div>
     <div class="row">
       	<div class="medium-3 small-6 columns">
             <h5>About Us</h5>
