--- a/about.html
+++ b/about.html
@@ -202,7 +202,7 @@ background: url(img/about-banner.jpg);
 	</div>
 
 	<div class="small-12 medium-3 columns end">
-		<img src="!" alt="Eric Sweetwood">
+		<img src="img/eric.png" alt="Eric Sweetwood">
 		<p class="buffer"><b>Eric Sweetwood</b>
 		
 		<br>Member since 2023
