--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@ background: url(img/about-banner.jpg);
 	
 	
 			<div class="small-12 medium-3 columns">
-			<img src="img/dawn.jpg" alt="Dawn McBride">
+			<img src="img/dawnmcbride.jpg" alt="Dawn McBride">
 			<p class="buffer"><b>Dawn McBride</b>
 			
 			<br>Member since June, 2018
@@ -162,7 +162,7 @@ background: url(img/about-banner.jpg);
 	
 	
 	<div class="small-12 medium-3 columns">
-	<img src="" alt="Chiko Tsukamoto">
+	<img src="img/tsukamotochizuko.png" alt="Chiko Tsukamoto">
 	<p class="buffer"><b>Chiko Tsukamoto</b>
 	
 	<br>Member since 2020
