--- a/getinvolved.html
+++ b/getinvolved.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
-    <title>Get involved | Bloomington-Normal Sister Cities</title>
+    <title>Get Involved | Bloomington-Normal Sister Cities</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="foundation.css" />
