--- a/programs.html
+++ b/programs.html
@@ -129,7 +129,7 @@ background: url(img/beernutsbanner.jpg);
 			
 			<p><p><strong>Arisa Mahatanankoon </strong>is currently a junior from University High School who has been sent on a year-long exchange to Asahikawa.
 				Arisa is the first Bloomington-Normal student to take part in the Sister Cities student exchange since the COVID-19 pandemic. She is attending Higashi High school (lit. "East High School"), and is recording her experiences every month on her WordPress Blog, <a href="https://fieldnotesinjapan.wordpress.com/">linked here.</a></p><p><img src="img/arisa.png" style="display: inline; max-width: 70%;"></p>Arisa and Jeff Kroesch (Sister Cities Committee Chairman) participating in an interview with GLT before her departure.<p>
-				While this is not Sana's first time studying abroad (she has studied in Thailand in years prior), living away from her family has been a new challenge.</p></p>
+				While this is not Arisa's first time studying abroad (she has studied in Thailand in years prior), living away from her family has been a new challenge.</p></p>
 		<!-- </div> -->
 		<div class="small-12 medium-8 columns">
 			<img src="" alt="">
@@ -143,7 +143,7 @@ background: url(img/beernutsbanner.jpg);
 <div class="row">
 		<!-- <div class="small-12 medium-4 columns"> -->
 			
-			<p><p>For both the Junior Ambassador Program and the High School Exchange Program, you can refer to the F.A.Q. page. If you need more information, contact Darren Sampson (darren.sampson@bnsistercities.org) for the High School Program, and Jeff Kroesch (jeff.kroesch@bnsistercities.org) for the Junior Ambassador Program.</p></p>
+			<p>For both the Junior Ambassador Program and the High School Exchange Program, you can refer to the F.A.Q. page. If you need more information, contact Veronica Kroesch (veronica.kroesch@bnsistercities.org) for the High School Program, and Jeff Kroesch (jeff.kroesch@bnsistercities.org) for the Junior Ambassador Program.</p>
 		<!-- </div> -->
 		<div class="small-12 medium-8 columns">
 			<img src="img/incursion.jpg" alt="">
