--- a/getinvolved.html
+++ b/getinvolved.html
@@ -101,7 +101,7 @@ background: url(img/get-involved-banner.jpg);
 
 <div class="row">
 	<div class="small-12 columns">
-		<h2>Become a host family</h2>
+		<h2>Become A Host Family</h2>
 	</div>
 	
 </div>
@@ -112,7 +112,7 @@ background: url(img/get-involved-banner.jpg);
 		<p><p>Couples or families typically host a student for three months or more. The ideal host family is eager to share aspects of American life with the student while being open to learning about other cultures. </p><p>Host parents are interviewed by the committee and by law must complete a background check. Host parents that are selected are expected to sign a contract with the committee, promising to fulfill certain obligations, and are provided with a set of rules that govern the conduct and expectations of the students.</p></p>
 
 		<h3>Junior High Host Families</h3>
-		<p><p>amilies are needed each March for approximately one week to host a junior high student.</p><p>The ideal host family is excited to expose the student to typical American life by being warm and welcoming. During the week, host families will be responsible for picking up and dropping off their student for daily committee arranged activities, attending the welcome and farewell parties, and spending time with the student during the evenings and weekend.</p></p>
+		<p><p>Families are needed each March for approximately one week to host a junior high student.</p><p>The ideal host family is excited to expose the student to typical American life by being warm and welcoming. During the week, host families will be responsible for picking up and dropping off their student for daily committee arranged activities, attending the welcome and farewell parties, and spending time with the student during the evenings and weekend.</p></p>
 
 		</div>
 	<div class="small-12 medium-6 columns">
@@ -128,20 +128,20 @@ background: url(img/get-involved-banner.jpg);
 <div class="row">
 	<div class="small-12 columns">
 		<h3>Apply today</h3>
-		<p><p><strong>Benefits of Being a Host Family</strong></p><ul><li>Interact with another culture</li><li>Share American culture, food, and customs</li><li>Create life-long friendships</li><li>Gain a global perspective</li><li>Have fun</li></ul><p>Due to the pandemic, both exchange programs are currently suspended. If you would like to be contacted about being a host family in the future, please fill out this form. </p><p><a href="http://www.bnsistercities.org/admin/resources/hostfamilyapp-2019.doc">Junior Ambassadors Host Family Application</a></p><p><a href="pdfs/ACEShfapp.pdf">High School Host Family Application</a></p></p>
+		<p><p><strong>Benefits of Being a Host Family</strong></p><ul><li>Interact with another culture</li><li>Share American culture, food, and customs</li><li>Create life-long friendships</li><li>Gain a global perspective</li><li>Have fun</li></ul><p>If you're interested in applying to be a host family, please fill out the respective form: </p><p><a href="pdfs/jrhostfamilyapp.docx">Junior Ambassadors Host Family Application</a></p><p><a href="pdfs/ACEShfapp.pdf">High School Host Family Application</a></p></p>
 	</div>
 </div>
 <hr>
 <div class="row">
 	<div class="small-12 columns">
-		<h2>Become a committee member</h2>
+		<h2>Become A Committee Member</h2>
 	</div>
 </div>
 <div class="row">
 	<div class="small-12 medium-6 columns">
 		<p><p>The Bloomington-Normal Asahikawa Sister Cities Committee is a volunteer committee that oversees all aspects of the sister city friendship. There are 20 board members with 10 members appointed by the City of Bloomington and 10 members appointed by the Town of Normal.</p></p>
 		<h3>Member Commitments</h3>
-		<p><p>Member Commitments</p><p>Committee members meet monthly and are expected to actively participate in at least one subcommittee:</p><ul><li>High School Exchange to Asahikawa</li><li>High School Exchange from Asahikawa</li><li>Junior Ambassadors from Asahikawa</li><li>Junior Ambassadors to Asahikawa</li></ul><p>These subcommittees facilitate the work of the committee on a weekly basis. The time commitment varies depending on the month, but committee members usually spend an average of 3 – 5 hours volunteering each month. If you would like to learn more, please contact Darren Sampson, Chair, for more information at darren.sampson@bnsistercities.org. Come be a part of this fun-loving, and wonderfully diverse, group of dedicated volunteers!</p></p>	
+		<p>Committee members meet monthly and are expected to actively participate in at least one subcommittee:</p><ul><li>High School Exchange to Asahikawa</li><li>High School Exchange from Asahikawa</li><li>Junior Ambassadors from Asahikawa</li><li>Junior Ambassadors to Asahikawa</li></ul><p>These subcommittees facilitate the work of the committee on a weekly basis. The time commitment varies depending on the month, but committee members usually spend an average of 3 – 5 hours volunteering each month. If you would like to learn more, please contact Jeff Kroesch, Chair, for more information at jeff.kroesch@bnsistercities.org. Come be a part of this fun-loving, and wonderfully diverse, group of dedicated volunteers!</p></p>	
 	</div>
 	<div class="small-12 medium-6 columns">
 		<figure><img class="photo-borders" src="img/maryanneschierman.jpeg" alt="">
@@ -166,7 +166,7 @@ background: url(img/get-involved-banner.jpg);
 </div>
 <div class="row">
 	<div class="small-12 columns">
-		<p>The committee is supported by the City of Bloomington and the Town of Normal and by donations. We welcome donations of any amount to further our mission of facilitating friendship with Asahikawa, Japan. The mailing address for donations is: c/o Ken Ota, 27 Lone Oak Ct., Bloomington, IL 61705. Contact Darren Sampson, Chair, with inquiries about company-sponsored volunteer programs.</p>	</div>
+		<p>The committee is supported by the City of Bloomington and the Town of Normal and by donations. We welcome donations of any amount to further our mission of facilitating friendship with Asahikawa, Japan. The mailing address for donations is: c/o Ken Ota, 27 Lone Oak Ct., Bloomington, IL 61705. Contact Jeff Kroesch, Chair, with inquiries about company-sponsored volunteer programs.</p></div>
 </div>
 
 <footer>
