--- a/getinvolved.html
+++ b/getinvolved.html
@@ -80,7 +80,7 @@
 
 
 background: url(img/get-involved-banner.jpg);
-	background-size: cover;-webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;
+	background-size: cover;-webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover; padding-top: 100px;
 
 ">
 	<div class="row">
@@ -166,7 +166,7 @@ background: url(img/get-involved-banner.jpg);
 </div>
 <div class="row">
 	<div class="small-12 columns">
-		<p>The committee is supported by the City of Bloomington and the Town of Normal and by donations. We welcome donations of any amount to further our mission of facilitating friendship with Asahikawa, Japan. The mailing address for donations is: c/o Ken Ota, 27 Lone Oak Ct., Bloomington, IL 61705. Contact Jeff Kroesch, Chair, with inquiries about company-sponsored volunteer programs.</p></div>
+		<p>The committee is supported by the City of Bloomington and the Town of Normal and by donations. We welcome donations of any amount to further our mission of facilitating friendship with Asahikawa, Japan. Please direct all donations-related inquiries to Dawn McBride, Treasurer, at <a href="mailto:dawn.mcbride@bnsistercities.org">dawn.mcbride@bnsistercities.org</a>. Contact Jeff Kroesch, Chair, with inquiries about company-sponsored volunteer programs.</p></div>
 </div>
 
 <footer>
