--- a/meetingtimes.html
+++ b/meetingtimes.html
@@ -76,21 +76,19 @@
 
  
  	
-<section class="full-width cta" style="background:url(img/hostfamilyhsfrombanner.jpg)no-repeat;background-position:0 40%;background-size: cover;-webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;">
- 	<div class="container">
-		<div class="row">
-			<br>
-			<br>
-			<br>
-			<br>
-		<div class="small-12 columns">
-			<section class="callout-homepage">
-				<h2 class="text-center">Google Calendar here?</h2>
-			</section>
- 	</div>
-	</div>
-	</div>
-</section>
+    <section class="full-width cta" style="background:url(img/hostfamilyhsfrombanner.jpg)no-repeat;background-position:0 40%;background-size: cover;-webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;">
+      <div class="container" style="height: 36rem">
+      </div>
+   
+    </section><div class="row" style="position: relative">
+     <div class="small-12 columns">
+       <section class="callout-homepage">
+         <h2 class="text-center">Meeting Times</h2>
+       </section>
+       <section class="callout-homepage-entry">
+         <p><p style="text-align: center;">Meetings are held on the first of the month at Room 202 at the CIRA unless conflicts arise (e.g. holidays, excessive projected absences)</p>
+     </div>
+   </div>
 
  <footer>
     <div class="row">
