--- a/juniorambassador.html
+++ b/juniorambassador.html
@@ -99,14 +99,7 @@ background: url(img/jrhighbanner.jpg);
 </aside>
 
 	<div class="row">
-		<div class="small-12 columns">
-			<aside>
-				<h3 class="margin">Current visit</h3>
-				<p>Due to the COVID-19 pandemic, there are currently no incoming junior high school students. We will post updates as the situation changes. </p>				
-			</aside>
 			</div>
-			</div>
-			<hr>
 			<div class="row">
 			<div class="small-12 columns">
 			<h3>To Asahikawa</h3>
@@ -119,7 +112,7 @@ background: url(img/jrhighbanner.jpg);
 			
 			<h3>From Asahikawa</h3>
 			
-			<p>Every year, around the end of March, the Bloomington-Normal Committee hosts junior high students from Japan for approximately one week. For some students, this will be their only chance to visit America. During their trip, the students stay with local Bloomington-Normal host families and get a glimpse of typical American life. During the weekdays, the committee arranges activities such as visiting local schools, WJBC, Artful Design, Beer Nuts, Bloomington and Normal City Hall, Upper Limits, Springfield, and Chicago. In the evenings and on weekends, the students spend time with their host family. We also host a welcome party and farewell party for all of our students and the host families just like the committee in Asahikawa does when our students visit.</p><p>The junior high program has been postponed due to the pandemic. If you would like to be contacted about being a host family in the future, please fill out this form. </p><p><a href="http://www.bnsistercities.org/admin/resources/ja-host-family-app.doc">Host family application is downloadable (click here)</a> and send it to <a href="mailto:jeff.kroesch@bnsistercities.org">jeff.kroesch@bnsistercities.org</a>.</p><p><img src="img/hostsolicitation.jpg"><br></p><br>
+			<p>Every year, around the end of March, the Bloomington-Normal Committee hosts junior high students from Japan for approximately one week. For some students, this will be their only chance to visit America. During their trip, the students stay with local Bloomington-Normal host families and get a glimpse of typical American life. During the weekdays, the committee arranges activities such as visiting local schools, WJBC, Artful Design, Beer Nuts, Bloomington and Normal City Hall, Upper Limits, Springfield, and Chicago. In the evenings and on weekends, the students spend time with their host family. We also host a welcome party and farewell party for all of our students and the host families just like the committee in Asahikawa does when our students visit.</p><p>The junior high program has been postponed due to the pandemic. If you would like to be contacted about being a host family in the future, please fill out this form. </p><p><a href="pdfs/Jr.hostfamilyapp2024.docx">Host family application is downloadable (click here)</a> and send it to <a href="mailto:jeff.kroesch@bnsistercities.org">jeff.kroesch@bnsistercities.org</a>.</p><p><img src="img/hostsolicitation.jpg"><br></p><br>
 		</div>
 	</div>
 	<br>
