--- a/about.html
+++ b/about.html
@@ -179,7 +179,7 @@ background: url(img/about-banner.jpg);
 	</div>
 	
 	
-		<div class="row">
+<!-- 		<div class="row">
 	
 	<div class="small-12 medium-3 columns">
 	<img src="img/med gaze.png" alt="Noah Davison">
@@ -190,11 +190,11 @@ background: url(img/about-banner.jpg);
 	</p>
 	</div>
 	
-		</div>
+		</div> -->
 	<div class="row">
 	
 	<div class="small-12 medium-3 columns end">
-	<img src="!" alt="Brenda Guest">
+	<img src="img/brenda.jpg" alt="Brenda Guest">
 	<p class="buffer"><b>Brenda Guest</b>
 	
 	<br>Member since 2019
